[gd_scene load_steps=4 format=1]

[ext_resource path="res://Characters/Base Character.gd" type="Script" id=1]
[ext_resource path="res://img/role_img/ninja-128.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 30.0

[node name="Base Character" type="Node2D"]

script/script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Area2D" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

transform/scale = Vector2( 0.390625, 0.390625 )
texture = ExtResource( 2 )

[connection signal="tween_complete" from="Tween" to="." method="_on_Tween_tween_complete"]

[connection signal="area_enter" from="Area2D" to="." method="_on_Area2D_area_enter"]

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]


